# ccode-generator

./: .gitignore  Cargo.toml  README.md  ccode
sample/: 255_len.txt
src/: encoder.rs  main.rs  math.rs  svg.rs
src/circle_code/: constructor.rs  downloader.rs  encoder.rs  file.rs  hash.rs  math.rs  mod.rs  svg.rs
src/creator/: download.rs  downloader.rs  encoder.rs  math.rs  mod.rs  svg.rs
