[package]
name = "circle-code"
version = "0.1.0"
authors = ["Quentin de Quelen <quentin@dequelen.me>"]

[[bin]]
name = "ccode"
path = "src/main.rs"
doc = false

[dependencies]
encoding = "0.2.33"
base64 = "~0.6.0"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
md5 = "0.3.6"
